fix tagline text overflow on 681px to 683px viewports

--- a/css/custom.css
+++ b/css/custom.css
@@ -210,7 +210,7 @@ i {
     }
 }
 
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 685px) {
     .header-logo {
         margin: 0px;
         display: block;
